# 08aulabootcamp

./: README.md  etl.py  pipeline.py  pyproject.toml
