[tool.poetry]
name = "08aulabootcamp"
version = "0.1.0"
description = ""
authors = ["Jeferson Almeida <jeferson.live11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.20.3"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
